opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: ["Anil Madhavapeddy" "Dave Scott" "Thomas Gazagnaire"]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/io-page"
bug-reports: "https://github.com/mirage/io-page/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "io-page"
  "dune" {build & >= "1.0"}
  "configurator" {build}
  "cstruct" {>= "2.0.0"}
  "ounit" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/io-page.git"
